# C-GNUPlot

./: .gitignore  Makefile  README.md  plot_tornado_data.gnu
data/: 1950-2014_torn.csv  Tornado_Intensity.csv  seatempt.csv
graphics/: Carbon1.pam  Carbon2.pam  Carbon3.pam  Checkbox1.pam  Checkbox2.pam  Graph1.pam  Graph2.pam  Intensity1.pam  Intensity2.pam  Intensity3.pam  Tornado1.pam  Tornado2.pam  Tornado3.pam  Upload1.pam  Upload2.pam  Upload3.pam
include/: Data_Array.h  Data_Point.h  Menu.h  MenuItem.h  gnuplot_i.hpp
requirements/: Big Data Features List.docx  Data_Array.xml  Data_Point.xml  Ethical Analysis.docx  Gnuplot.xml  Menu.xml  Menu_Item.xml
src/: CMakeLists.txt  Data_Array.cpp  Menu.cpp  MenuDriver.cpp  MenuItem.cpp  MenuItemDriver.cpp  climate.cpp  commandline.cpp  datarraydriver.cpp  demo-plot.cpp  demo-ui.cpp  demo1-ui.cpp  demo2-ui.cpp  rearrange.cpp  texture.cpp  tornado_intensity_mapper.cpp  tornado_intensity_reducer.cpp  tornado_mapper.cpp  tornado_reducer.cpp  wcmapper.cpp  wcreducer.cpp
